// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Community Collections component renders will set state on receiving new props 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    sm={4}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="title"
        >
          Title
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="created_date"
        >
          Created Date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="2"
          value="updated_date"
        >
          Updated Date
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    sm={4}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    sm={4}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Records per page
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
      >
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-5"
          value={5}
        >
          5
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-10"
          value={10}
        >
          10
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Community Collections component renders will set state on receiving new props 2`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    sm={4}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="Publication date"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="title"
        >
          Title
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="created_date"
        >
          Created Date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="2"
          value="updated_date"
        >
          Updated Date
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    sm={4}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="test"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    sm={4}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Records per page
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={5}
      >
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-5"
          value={5}
        >
          5
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-10"
          value={10}
        >
          10
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Community Collections component renders with empty paging data 1`] = `
<span
  className="publicationsListSorting empty"
/>
`;

exports[`Community Collections component renders with export dropdown for admin or author 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    sm={4}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="title"
        >
          Title
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="created_date"
        >
          Created Date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="2"
          value="updated_date"
        >
          Updated Date
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    sm={4}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    sm={4}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Records per page
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
      >
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-10"
          value={10}
        >
          10
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Community Collections component renders with export dropdown hidden 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    sm={4}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="title"
        >
          Title
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="created_date"
        >
          Created Date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="2"
          value="updated_date"
        >
          Updated Date
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    sm={4}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    sm={4}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Records per page
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
      >
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-10"
          value={10}
        >
          10
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Community Collections component renders with non-empty community paging data 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    sm={4}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="title"
        >
          Title
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="created_date"
        >
          Created Date
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="2"
          value="updated_date"
        >
          Updated Date
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    sm={4}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(ForwardRef(MenuItem))
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    sm={4}
    xs={12}
  >
    <WithStyles(ForwardRef(FormControl))
      fullWidth={true}
    >
      <WithStyles(ForwardRef(InputLabel))
        shrink={true}
      >
        Records per page
      </WithStyles(ForwardRef(InputLabel))>
      <WithStyles(ForwardRef(Select))
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
      >
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-10"
          value={10}
        >
          10
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(ForwardRef(MenuItem))>
        <WithStyles(ForwardRef(MenuItem))
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(ForwardRef(MenuItem))>
      </WithStyles(ForwardRef(Select))>
    </WithStyles(ForwardRef(FormControl))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
